# ChangeLog for app-shells/zsh-completion
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-shells/zsh-completion/ChangeLog,v 1.32 2009/03/20 03:27:29 jmbsvicetto Exp $

  20 Mar 2009; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
  metadata.xml:
  Removing compnerd as a maintainer since he was retired.

  21 Mar 2008; Dawid Węgliński <cla@gentoo.org>
  zsh-completion-20080310.ebuild:
  zsh-completion-20080310 needs zsh in 4.3.5 version (bug #214124)

*zsh-completion-20080310 (10 Mar 2008)

  10 Mar 2008; Dawid Węgliński <cla@gentoo.org>
  +zsh-completion-20080310.ebuild:
  Version bump to 20080310 (bug #212941)

*zsh-completion-20080110 (11 Jan 2008)

  11 Jan 2008; Saleem Abdulrasool <compnerd@gentoo.org>
  +zsh-completion-20080110.ebuild:
  Version bump closes bugs #181381, #197518, #204185

  04 Jan 2008; Saleem Abdulrasool <compnerd@gentoo.org> metadata.xml:
  Adding cla to maintainers

  04 Jan 2008; Saleem Abdulrasool <compnerd@gentoo.org>
  -zsh-completion-20040730.ebuild, -zsh-completion-20050120.ebuild,
  -zsh-completion-20050503.ebuild:
  prune unused versions

  04 Jan 2008; Saleem Abdulrasool <compnerd@gentoo.org> metadata.xml:
  Add myself as maintainer as per message on -dev.

  25 Dec 2007; Christian Heim <phreak@gentoo.org> metadata.xml:
  Removing usata from metadata.xml as per #22931. Assigning to maintainer-needed.

  14 Jun 2007; Raúl Porcel <armin76@gentoo.org>
  zsh-completion-20060618.ebuild:
  alpha stable wrt #168320

  01 Mar 2007; Jason Wever <weeve@gentoo.org>
  zsh-completion-20060618.ebuild:
  Stable on SPARC wrt bug #168320.

  28 Feb 2007; Simon Stelling <blubb@gentoo.org>
  zsh-completion-20060618.ebuild:
  stable on amd64; bug 168320

  27 Feb 2007; Fabian Groffen <grobian@gentoo.org>
  zsh-completion-20040730.ebuild, zsh-completion-20050120.ebuild,
  zsh-completion-20050503.ebuild, zsh-completion-20060618.ebuild:
  Dropped ppc-macos keyword, see you in prefix
