@@ -4,5 +4,5 @@ DIST zsh-completion-20080310.tar.bz2 18625 RMD160 f169b8d775ec768169af72e5f743d9
 EBUILD zsh-completion-20060618.ebuild 842 RMD160 f889a51c275bb916443efe13e5a41d7c7fced8d1 SHA1 609981f053cb3f2e97341c5257da1a130721c703 SHA256 97a8ede06ac0dc9d0ccd200171677732159a2ddb0956f82c2631e59092e1d443
 EBUILD zsh-completion-20080110.ebuild 798 RMD160 83d2160d60757c9a6b3aeb1d23ed52c1d08ca8ec SHA1 2f985894920951da69dda2f079feb58a6e777abc SHA256 6149354d7b9fd492aa44a51a8ad404e5e8ab9adab88a6e49917629bc85edf2b2
 EBUILD zsh-completion-20080310.ebuild 840 RMD160 ae80927d26a5a135083d892322c534655c4310cc SHA1 89393268b7199ad28ddbc287c5c81cce77223133 SHA256 644e5f5f7917be90f5103013be89e7f93e8ade60ea06af8581fda45952ef83d9
-MISC ChangeLog 4746 RMD160 8648986b17a86c55bd4d1c052abeb17edc69c37a SHA1 c3066dd2ec49263d318ef12980d2ebd3c4dfb6f0 SHA256 66149e08a99de088391390ab7c3a9175661bd99b1624b7f43a79b524d410ba5b
-MISC metadata.xml 331 RMD160 00ac226cd62946eed98bc1d265e57c98540b377e SHA1 dbcdcd96674a87941dfe59014e9a93422914a672 SHA256 b9dcb250f355664e3defbcd14c90484fe048f60d478124ed19102ef2d9d8b0ad
+MISC ChangeLog 4869 RMD160 84237b677f5b11e6cd444c335ec6a863e9ef695d SHA1 a2f28e7b54ff4ed2f8379bb7fd3dad0e8b489d30 SHA256 1d544283ca57fb9ad95927eef5fe376a0207173d9c695cfd2744d65f31cc0599
+MISC metadata.xml 259 RMD160 13dae5e029ed8a26f64460f4f819aedb1c06c159 SHA1 31c551a9268773e957ca8bef06d4665f8ddc04fd SHA256 3d0148e6278d4f820e7f29977d6ef1f4a4b7ea3e64cc5c56574b020ad9fe8ce8
