@@ -1,10 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-	<herd>no-herd</herd>
-	<maintainer>
-		<email>maintainer-needed@gentoo.org</email>
-		</maintainer>
+	<herd>shell-tools</herd>
 	<maintainer>
 		<email>cla@gentoo.org</email>
 		<name>Dawid Węgliński</name>
